examples/test/testpolicy10294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10294
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key4: value19
      key37: value5
      key12: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value13
      podSelector:
        matchLabels:
          key37: value45
          key25: value22
